# engine

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  INSTALL_WINDOWS.md  ISSUE_TEMPLATE.md  LICENSE  README.md
Assets/Shaders/: basicShading.frag  basicShading.vert  colorShading.frag  colorShading.vert
src/: BasicGameState.cpp  BasicGameState.h  CMakeLists.txt  CPPLINT.CFG  GameContainer.cpp  GameContainer.h  GameContainer.h.gch  GameState.h  Input.cpp  Input.h  Input.h.gch  Window.cpp  Window.h  main.cpp
src/Audio/: Music.cpp  Music.h  Sound.h
src/Graphics/: Camera2D.cpp  Camera2D.h  GLSLProgram.cpp  GLSLProgram.h  GLTexture.h  Graphics.cpp  Graphics.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  SpriteBatch.cpp  SpriteBatch.h  Vertex.h
src/Localization/: LanguageCodes.h  Localizer.cpp  Localizer.h
src/Resources/: ImageLoader.cpp  ImageLoader.h  ResourceManager.cpp  ResourceManager.h  TextureCache.cpp  TextureCache.h
src/Types/: Color.cpp  Color.h  Vector2.h
src/Util/: Constants.h  IOManager.cpp  IOManager.h  Logger.cpp  Logger.h  PicoPNG.cpp  PicoPNG.h
src/Util/Debugger/: Debugger.cpp  Debugger.h  Memory.cpp  Memory.h  Processor.cpp  Processor.h
test/: CMakeLists.txt  GameContainerTest.cpp  GameEnvironment.cpp  GameEnvironment.h  TestingGameState.h  gtest.cpp  test.cpp
